# ctgproject

./: DataExplore.ipynb  Modeling.ipynb  Report.ipynb  fastapidemo.py  main.py  pyproject.toml  requirements.txt  utils.py
